--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0",
-    "react-spring": "^8.0.27"
+    "react-spring": "^8.0.27",
+    "react-waypoint": "^9.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
