--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
     "react-media": "^1.10.0",
-    "react-scripts": "3.2.0",
+    "react-pdf": "^4.1.0",
+    "react-scripts": "^3.4.0",
     "react-scrollable-anchor": "^0.6.1",
     "react-slide-toggle": "^0.3.3",
     "react-spring": "^8.0.27",
