--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.10.2",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
+    "react-ga": "^3.0.0",
     "react-media": "^1.10.0",
     "react-pdf": "^4.1.0",
     "react-scripts": "^3.4.0",
