--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.17.3"
+  },
   "dependencies": {
     "bootstrap": "^4.5.3",
     "react": "^16.14.0",
